<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/atheneos_LightGrey">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TimePicker
                        android:id="@+id/tip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="1.4"
                        android:scaleY="1.4"
                        android:translationY="90dp" />

                    <Button
                        android:id="@+id/button_setAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="70dp"
                        android:background="@color/atheneos_yellow"
                        android:onClick="button_setAlarm_Clicked"
                        android:text="@string/text_button_setAlarm"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:translationY="525dp" />

                    <Button
                        android:id="@+id/button_cancleAlarm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="70dp"
                        android:background="@color/atheneos_yellow"
                        android:onClick="button_cancleAlarm_Clicked"
                        android:text="Alarm beenden"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:translationY="600dp" />

                    <TextClock
                        android:id="@+id/tec"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:translationX="600dp"/>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button_startCountdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:height="70dp"
                        android:background="@color/atheneos_yellow"
                        android:onClick="button_startCountdonwn_Clicked"
                        android:text="@string/text_button_startCountdown"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:translationY="525dp" />

                    <TimePicker
                        android:id="@+id/spinnerClock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleX="1.5"
                        android:scaleY="1.5"
                        android:timePickerMode="spinner"
                        android:translationY="50dp" />




                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_remainingSeconds"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:translationY="100dp"
                        android:textSize="24sp"
                        />

                    <TextView
                        android:id="@+id/tv_remainingSeconds"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textAlignment="center"
                        android:textStyle="bold"
                        android:translationY="120dp"
                        android:textSize="48sp"/>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/button_start_stop"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:height="70dp"
                            android:background="@color/atheneos_yellow"
                            android:onClick="button_start_stop_Clicked"
                            android:text="@string/text_button_start"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:translationY="525dp" />

                        <Chronometer
                            android:id="@+id/chron"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="50sp"
                            android:translationY="100dp" />

                        <TextView
                            android:id="@+id/tv_delta_t"
                            android:layout_width="match_parent"
                            android:layout_height="52dp"
                            android:gravity="center_horizontal"
                            android:text="@string/text_delta_t"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:translationY="400dp" />

                    </RelativeLayout>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</LinearLayout>